Fix placement of positioned elements with auto "top".  Bug 44508, patch by Mats Palmgren (mats.palmgren@bredband.net), r=dbaron, sr=bzbarsky.